# QuantAgent

./: .cursorrules  .gitignore  Procfile  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
api/: index.py
docs/: RelativeValueShortAltcoinStrategy.md  assistant-ui-design.md  claude_prompts.md  storage-layer-system-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assistant-ui/: AssistantModal.tsx  AssistantSidebar.tsx  CryptoQuantRuntimeProvider.tsx  MarkdownTextPart.tsx  ModelSelector.tsx  OrdersTable.tsx  Thread.tsx  TradeIntentContext.tsx  attachmentAdapter.ts  getThreadMessageText.ts  orderUtils.ts
frontend/src/components/: ChatPanel.tsx  ChatPanelV2.tsx  ClosePositionDialog.tsx  FundingFeeTable.tsx  FundingHistoryDialog.tsx  MarketDataTable.tsx  OrderHistoryTable.tsx  OrderMetaTable.tsx  OrderPlaceDialog.tsx  OrderbookHistoryDialog.tsx  PositionsTable.tsx
frontend/src/hooks/: useAutoRefresh.ts
qa/: HANDLE.md  README.md  allowed_commands.md
qa/bug_reports/: BUG-TEMPLATE.md
qa/test_plans/: binance_trade_api_phase1.md
qa/tests/: conftest.py  test_binance_trade_api.py  test_binance_trade_api_demo.py
scripts/: backend_server.py  build_order_meta.py  crawl_hyperliquid_vault.py  fetch_funding_fee_90d.py
src/: backend_server.py  binance_order_status_ws.py  binance_trade_api.py  build_leverage_max_position.py  crawl_binance_usdm_positions.py  env_manager.py  fetch_binance_funding_history.py  test_order_place_and_track.py
