[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoquant"
version = "0.1.0"
description = "CryptoQuant backend and frontend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "Flask>=3.0.0",
    "anthropic>=0.36.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
backend-server = "src.backend_server:main"

# Vercel deploy: serverless entry is api/index.py (exports app = create_app()).
# See vercel.json for routes and builds.

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
